# backend/app.js
@@ -12,6 +12,10 @@ app.use('/api/water',require('./routes/water'));
 app.use('/api/maintenance',require('./routes/maintenance'));
 app.use('/api/history',require('./routes/history'));
 app.use('/api/alert',require('./routes/alert'));
+app.use('/api/admins', require('./routes/admins'));
+app.use('/api/contact', require('./routes/contact'));
+app.use('/api/complaints', require('./routes/complaints'));
+app.use('/api/plans', require('./routes/plans'));
 app.use('/api/docs',swaggerUi.serve,swaggerUi.setup(swaggerDocument));
 
 const port=process.env.PORT||5000;
